--- a/css/floating-wpp.css
+++ b/css/floating-wpp.css
@@ -56,21 +56,23 @@
   width: 260px;
   height: auto;
   bottom: 82px;
-  opacity: 0.9;
+  opacity: 0.95;
+  border: 1px solid lightgray;
+  box-shadow: 0 0 5px 1px lightgray;
 }
 
 .floating-wpp .floating-wpp-popup .floating-wpp-message {
   background-color: white;
   padding: 8px;
   border-radius: 0px 5px 5px 5px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 1px 1px rgba(f, f, f, 0.15);
   opacity: 0;
-  transition: opacity 0.2s;
+  transition: opacity 0.1s;
 }
 
 .floating-wpp .floating-wpp-popup.active .floating-wpp-message {
   opacity: 1;
-  transition-delay: 0.2s;
+  transition-delay: 0s;
 }
 
 .floating-wpp .floating-wpp-popup .floating-wpp-head {
